# traact_workspace_conan2

./: .gitignore  CMakeLists.txt  README.md  build_all.bat  build_all.sh  build_all_release.sh  cloneAll.sh  conanfile.py  delete_build.sh  edit_all_libraries.sh  edit_all_libraries_remove.sh  export_all.sh  repos.txt  update_env.sh  update_traact_editable.sh  update_traact_editable_release.sh
config/: registration_icp_capture.json
